# miso-example

./: .gitignore  README.md  build.sh  cabal-ghcjs.project  cabal.project  default.nix
client/: client.cabal
client/src/: Main.hs
common/: common.cabal
common/src/: Common.hs
server/: server.cabal
server/src/: Main.hs
