name:                server
version:             0.0.0.0
build-type:          Simple
cabal-version:       >=1.10

executable server
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010
  build-depends:       base ==4.9.*
                     , common ==0.0.0.*
                     , lucid >=2.9.8 && <2.10
                     , miso >=0.21.1 && <0.22
                     , servant-lucid >=0.7.1 && <0.8
                     , servant-server ==0.11.*
                     , wai-extra ==3.0.*
                     , warp >=3.2.13 && <3.3
